metadata/force-app/main/default/objects/CustomName_qirLG__c/CustomName_qirLG__c.object-meta.xml
<CustomObject>
    <description>Description_Wnytd</description>
    <label>CustomLabel_uUxHl</label>
    <nameField>
        <label>CustomLabel_uUxHl</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_uUxHls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>