metadata/force-app/main/default/objects/CustomName_qirLG__c/fields/CustomField_ANJzj__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ANJzj__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGDGms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>